ej 3 factorial-break

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <p>gola</p>
     <script src="ej2.js"></script>
+    <script src="factorial-for.js"></script>
+    <script src="factorial-while.js"></script>
+    <script src="factorial-break.js"></script>
 </head>
 <body>
     
